--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,9 +1,12 @@
 name: Waka Readme
 
 on:
-  schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+  push:
+    branches:
+      - master
+  # schedule:
+  #   # Runs at 12am IST
+  #   - cron: '30 18 * * *'
 
 jobs:
   update-readme:
