--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -18,3 +18,6 @@ jobs:
           SHOW_EDITORS: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_PROJECTS: "False"
+          SHOW_COMMIT: "False"
+          SHOW_DAYS_OF_WEEK: "False"
